charts/kustomize/overlays/dev/fag-deployments-order-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fag-order-gateway
  #namespace: fag
  labels:
    app: fag-order-gateway
spec:
  selector:
    matchLabels:
      app: fag-order-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: fag-order-gateway
