charts/kustomize/overlays/dev/fag-ingress-dashboard-jaegar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboards-jaegar
  annotations:
    namespace: dev
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.dev.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fag-jaeger
                port:
                  number: 16686
            path: /jaegar
  tls:
    - hosts:
        - www.dev.sklrsn.in
      secretName: nginx-tls-secret
