charts/kustomize/overlays/dev/fag-ingress-dashboards.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboards
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.dev.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 3000
            path: /grafana
    - host: www.dev.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fag-jaeger
                port:
                  number: 16686
            path: /jaegar
  tls:
    - hosts:
        - www.dev.sklrsn.in
      secretName: nginx-tls-secret
