charts/kustomize/overlays/dev/fag-ingress-order-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  defaultBackend:
    service:
      name: fag-jaeger
      port:
        number: 16686
  ingressClassName: nginx
  rules:
    - host: www.dev.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fag-order-gateway
                port:
                  number: 8080
            path: /order-gateway

          - pathType: Prefix
            backend:
              service:
                name: fag-jaeger
                port:
                  number: 16686
            path: /fag-jaeger
  tls:
    - hosts:
        - www.dev.sklrsn.in
      secretName: nginx-tls-secret
